--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.2.2",
+    "swiper": "^9.0.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
