--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
 # dependencies
 /node_modules
 /.pnp
@@ -73,3 +72,6 @@ bin/
 
 package-lock.json
 .env
+
+bundle.js
+dist/
